--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.3",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.5.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5"
   },
