--- a/package.json
+++ b/package.json
@@ -12,26 +12,38 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@react-spring/web": "^9.7.5",
-    "@tailwindcss/vite": "^4.0.9",
+    "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.484.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
-
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "socket.io-client": "^4.8.1"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/node": "^22.13.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -43,7 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^4.0.17",
     "vite": "^6.1.0"
   }
 }
