--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "framer-motion": "^12.5.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.484.0",
     "mdb-react-ui-kit": "^9.0.0",
     "ogl": "^1.0.11",
