--- a/websocket/package.json
+++ b/websocket/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.2",
+    "sequelize": "^6.35.2",
     "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7",
-    "sequelize": "^6.35.2"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
