--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-spring/web": "^9.7.5",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.17",
-    "axios": "^1.8.3",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -30,6 +30,7 @@
     "lucide-react": "^0.484.0",
     "mdb-react-ui-kit": "^9.0.0",
     "ogl": "^1.0.11",
+    "proptypes": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
